# MADvolution_2

./: .gitignore  LICENSE  README.md  pyproject.toml
ai分析数据/: Music_report.md  combined_reports.md
ai剪辑脚本/: mad_script.md
mad剪辑提示词/: 提示词.txt  系统提示词.txt
src/: ai_auto_processor.py  auto_cut_video(视频切割).py  batch_video_processor(批量处理视频内容).py  clear_cache缓存清理工具.py  combine_reports(内容合并工具).py  config.json  install_deps.py  mad_script_generator(ai生成剪辑脚本).py  main_gui.py  music_analyzer(音乐分析工具).py  music_config.py  requirements.txt  video_analyzer.py  video_merger(视频合并工具).py  video_merger.py
src/抛弃的用法/: deepseek_rag.py
