[project]
name = "madvolution-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.12",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "natsort>=8.4.0",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "pillow>=10.4.0",
    "uvicorn>=0.33.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
